--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,11 @@ steps:
     cliProjectKey: 'com.tayyab.javamaven'
     cliProjectName: 'com.tayyab.javamaven'
     cliSources: '.'
+    extraProperties: |
+      sonar.sources=src/main/java
+      sonar.tests=src/test/java
+      sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+      sonar.junit.reportPaths=target/surefire-reports
 
 - task: Cache@2
   inputs:
